--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@mui/styles": "^5.15.14",
     "@rollup/plugin-replace": "^5.0.5",
     "axios": "^1.6.8",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.3",
     "vite-plugin-env-compatible": "^2.0.1"
   },
