feat: concurrently library for running json-server and vite at the same time

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 3000",
+    "start": "concurrently \"vite --port 3000\" \"json-server --watch db.json --port 4000\"",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -20,6 +21,7 @@
     "@mui/x-date-pickers": "^7.0.0",
     "@rollup/plugin-replace": "^5.0.5",
     "axios": "^1.6.8",
+    "concurrently": "^8.2.2",
     "dayjs": "^1.11.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
